syntax = "proto3";

package proto;

option go_package = "proto";

message Answer {
  int64 id = 1;
  string text = 2;
  int64 question_id = 3;
  bool enabled = 4;
  bool correct = 5;
}

message ListAnswerRequest {}

message ListAnswerResponse { repeated Answer answers = 1; }

message GetAnswerRequest { int64 id = 1; }

message CreateAnswerRequest {
  string text = 1;
  int64 question_id = 2;
  bool enabled = 3;
  bool correct = 4;
}

message UpdateAnswerRequest {
  Answer answer = 1;
  repeated string update_mask = 2;
}

message DeleteAnswerRequest { int64 id = 1; }
